--- a/mdb/README
+++ b/mdb/README
@@ -1,15 +1,15 @@
 NAME
-    md - simple tool to dump parts of mongo databases to debug corruption issues
+    mdb - simple tool to dump parts of mongo databases to debug corruption issues
 
 SYNOPSIS
-    md -c[lnpi[b]] dbpath database collection
-    md -x[lnp[b]] filename offset
-    md -r[b] filename offset
-    md -b filename offset
+    mdb -c[lnpi[b]] dbpath database collection
+    mdb -x[lnp[b]] filename offset
+    mdb -r[b] filename offset
+    mdb -b filename offset
 
 DESCRIPTION
 
-    md understands a subset of MongoDB and BSON data formats and is able to parse, partially
+    mdb understands a subset of MongoDB and BSON data formats and is able to parse, partially
     validate, and print such data from entire database directories or from specified locations
     within specified database files. In addition it provides detailed information about the location
     within each file where the parsed information is found, including the location where corruption
@@ -17,7 +17,7 @@ DESCRIPTION
     
     Operation is controlled by a set of flags specified in the first argument, as follows:
 
-    c If the c flag is specified you must specify a dbpath, database name, and collection name.  md
+    c If the c flag is specified you must specify a dbpath, database name, and collection name.  mdb
       prints information from the .ns file for the given collection in the database at the specified
       dbpath. This includes the collection information from the ns file, and the list of extent
       headers for this collection. If in addition the l, n, p, or i flags are specified, the record
@@ -27,16 +27,16 @@ DESCRIPTION
 
     l The records within the extent(s) are traversed from the beginning of the extent to the end,
       following the "length" field of the record headers. This is the most useful record traversal
-      mode for database corruption debugging because in this mode, when corruption is detected, md
+      mode for database corruption debugging because in this mode, when corruption is detected, mdb
       attempts to resync and continue by finding the next apparently valid record header in the
       extent.
 
     n The records within the extent(s) are traversed following the "next" pointers in the record
-      headers. In this mode when record header corruption is detected no recovery is possible so md
+      headers. In this mode when record header corruption is detected no recovery is possible so mdb
       exits.
 
     p The records within the extent(s) are traversed following the "prev" pointers in the record
-      headers. In this mode when record header corruption is detected no recovery is possible so md
+      headers. In this mode when record header corruption is detected no recovery is possible so mdb
       exits.
 
     i The records in the collection are enumerated following the _id index. Not implemented yet.
