journal files; python 2.4
runs under python 2.4 for backlevel customers
support for decoding journal files

--- a/mdb/README
+++ b/mdb/README
@@ -36,6 +36,8 @@ DESCRIPTION
       free list is annotated with it's bucket and ordinal position
       within the free list for that bucket.
 
+    i when used with the c flag, indexes for the collection are printed.
+
     x Extent headers are printed. When used with the c flag the extent
       headers for the selected namespaces are printed. When used
       without the c flag you must specify a database filename and you
