--- a/mdb-wt/README
+++ b/mdb-wt/README
@@ -22,3 +22,24 @@ DESCRIPTION
 
     B Like the b flag, except that field values for all types is
       printed.
+
+INSTALLING SNAPPY
+
+    To examine page contents (keys and values) for pages compressed
+    using Snappy you will need the snappy library and Python snappy
+    module. To install:
+
+    On Ubuntu:
+    sudo apt-get install python-pip
+    sudo apt-get install python-dev
+    sudo apt-get install libsnappy-dev
+    sudo pip install python-snappy
+
+    On EL:
+    sudo easy_install pip
+    sudo yum install snappy-devel
+    sudo yum install gcc-c++
+    sudo pip install python-snappy
+
+    Snappy support is not needed to view page headers and block
+    manager pages as these are not compressed.
